[package]
name = "peer-to-peer"
version = "0.1.0"
edition = "2024"

[dependencies]
nymlib = { git = "https://github.com/valansai/nymlib", branch = "main" }
tokio = { version = "1.0", features = ["rt", "net", "io-std"] }
rand = "0.8.5" 
clap = { version = "4.5", features = ["derive"] }
log = "0.4"         
simplelog = "0.12"
tempfile = "3.21.0"
lmdb = "0.8.0"